--- a/layouts/partials/nav/sidebar/main.html
+++ b/layouts/partials/nav/sidebar/main.html
@@ -4,13 +4,8 @@
 <aside id="sidebar" class="pb-16 bg-background fixed overflow-auto overflow-x-hidden z-30 overflow-y-scroll border-t md:border-none top-16 bottom-0 md:bottom-12 left-0 w-5/6 md:w-80 xl:w-96 transition-all duration-300 transform -translate-x-full md:translate-x-0 print:hidden">
 
   <div class="pt-16">
-    {{/* sidebar always build from the root level */}}
-    {{/* {{ with .Site.GetPage "/" }} */}}
-      {{/* {{ range .Pages }} */}}
-        {{/* {{ partial "nav/sidebar/sidebar.html" (dict "ctx" . "depth" 0 "Page" $.Page ) }} */}}
-      {{/* {{ end }} */}}
-      {{ partial "nav/sidebar/sidebar2.html" . }}
-    {{/* {{ end }} */}}
+    {{/* sidebar (always build from the root level) */}}
+    {{ partial "nav/sidebar/sidebar.html" . }}
   </div>
 
   <div class="border-t">
