--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -8,6 +8,8 @@
           {{ partial "body/breadcrumb" . }}
         </div>
 
+        {{ partial "body/version-note" . }}
+
         <header>
           <h1>{{ .Title }}</h1>
         </header>
