--- a/layouts/lib/data-type.html
+++ b/layouts/lib/data-type.html
@@ -10,6 +10,8 @@
             {{ partial "body/page-buttons.html" . }}
           </div>
 
+          {{ partial "body/version-note" . }}
+
           {{/* read the YAML data from the page resources */}}
           {{ $yamlData := partial "lib/get-yaml-data" ( dict "ctx" $ "fileName" "definition" ) }}
 
