--- a/layouts/partials/nav/sidebar/sidebar.html
+++ b/layouts/partials/nav/sidebar/sidebar.html
@@ -32,9 +32,11 @@
   {{/* page is part of a versioned section */}}
   {{ $isVersioned := false }}
   {{ $branches := dict }}
-  {{ with index .p1.Site.Data.import .p1.Title }}
-    {{ $isVersioned = true}}
-    {{ $branches = . }}
+  {{ with .p1.Site.Data.import }}
+    {{ with index . $.p1.Title }}
+      {{ $isVersioned = true}}
+      {{ $branches = . }}
+    {{end}}
   {{end}}
 
   {{ $padding := printf "pl-%v" (add (mul $level 2) 2) }}
