--- a/layouts/partials/lib/function/source-code.html
+++ b/layouts/partials/lib/function/source-code.html
@@ -70,7 +70,7 @@
 
                 {{ with $data.type }}{{$type = printf " : %s" . }}{{end}}
                 {{ with $data.default_value }}{{$default_value = printf " := %v" . }}{{end}}
-                {{ with $data.comment }}{{$comment = printf " (*%s*)" . }}{{end}}
+                {{ with $data.comment }}{{$comment = printf " (*%s*)" (. | replaceRE "\n" " " | strings.TrimRight " ") }}{{end}}
                 {{ $code_block = printf "%s  %s%s%v;%s\n" $code_block $data.name $type $default_value $comment}}
               {{ end }}
               {{/* end of a group */}}
