--- a/layouts/partials/lib/function/var-table.html
+++ b/layouts/partials/lib/function/var-table.html
@@ -1,7 +1,7 @@
 {{/* render variables as table */}}
 {{ with .var }}
-  <div class="overflow-x-auto">
-    <table class="whitespace-nowrap">
+  <div class="overflow-x-auto md:overflow-x-hidden">
+    <table class="whitespace-nowrap md:whitespace-normal">
       <thead>
         <tr>
           <th scope="col">kind</th>{{/* todo: only icons in this column */}}
