--- a/layouts/partials/lib/legend-table.html
+++ b/layouts/partials/lib/legend-table.html
@@ -1,6 +1,6 @@
 {{/* this lists the possible values of the variable in a table */}}
-<div class="overflow-x-auto">
-  <table class="whitespace-nowrap">
+<div class="overflow-x-auto md:overflow-x-hidden">
+  <table class="whitespace-nowrap md:whitespace-normal">
     <thead>
     <tr>
       <th scope="col" class="w-1/4">value</th>
