layout tags and categories improved

--- a/layouts/lib/function.html
+++ b/layouts/lib/function.html
@@ -25,7 +25,7 @@
             {{ end }}
           </header>
 
-          <div class="mb-8 flex flex-col items-start sm:flex-row sm:items-center sm:flex-wrap sm:flex-grow">
+          <div class="mb-8 flex flex-wrap flex-row items-center">
             {{ partial "lib/infos" $yamlData }}
             {{ partial "body/tags" . }}
           </div>
