--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -19,7 +19,7 @@
             {{ end }}
           </header>
 
-          <div class="mb-8 flex flex-col items-start sm:flex-row sm:items-center sm:flex-wrap sm:flex-grow">
+          <div class="mb-8 flex flex-wrap flex-row items-center">
             {{ partial "body/infos" . }}
             {{ partial "body/tags" . }}
           </div>
