--- a/layouts/partials/body/tags.html
+++ b/layouts/partials/body/tags.html
@@ -9,7 +9,7 @@
   </div>
 {{ end }}
 
-{{ if .Params.categories }}
+{{ if and .Params.categories (not  (or (eq (.Param "layout") "function") (eq (.Param "layout") "data-type") (eq (.Param "layout") "enum"))) }}
   <div class="flex items-center flex-wrap mr-2 text-xs">
     <span class="py-0.5 flex items-center flex-wrap mr-2" title="categories">
       {{ partial "svgs/heroicons/bookmark.svg" (dict "class" "h-4 mr-1" ) }}
