--- a/layouts/partials/lib/link.html
+++ b/layouts/partials/lib/link.html
@@ -17,7 +17,7 @@
 
 {{ range where (where $ctx.Site.Pages "Slug" $libItem) "Section" $ctx.Section }}
   {{ $url = .Permalink }}
-  {{ if or (eq (.Param "layout") "function") (eq (.Param "layout") "data-type") }}
+  {{ if or (eq (.Param "layout") "function") (eq (.Param "layout") "data-type") (eq (.Param "layout") "enum") }}
     {{ $code = "`"}}
   {{ end }}
 {{ end }}
@@ -25,7 +25,7 @@
 {{ if not $url}}
   {{ range where (where $ctx.Site.Pages "Title" $libItem) "Section" $ctx.Section }}
     {{ $url = .Permalink }}
-    {{ if or (eq (.Param "layout") "function") (eq (.Param "layout") "data-type") }}
+    {{ if or (eq (.Param "layout") "function") (eq (.Param "layout") "data-type") (eq (.Param "layout") "enum") }}
       {{ $code = "`"}}
     {{ end }}
   {{ end }}
