read version info once (into scratch)

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.LanguageCode }}">
+  {{ partial "page/get-version-info" . }}
 
   <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
