--- a/layouts/partials/nav/sidebar/sidebar.html
+++ b/layouts/partials/nav/sidebar/sidebar.html
@@ -71,9 +71,10 @@
       </a>
 
       {{if $hasBranchSelector }}
+        {{/* label without version number */}}
         {{ partial "nav/sidebar/branch-selector.html" (dict
           "branches" $branches
-          "label" (.p1.Section | replaceRE "(^.*)(-.*)" "$1")
+          "label" (.p1.Section | replaceRE "([-0-9/.])*$" "" )
           )
         }}
       {{end}}
